...
        
    override func viewDidLoad() {
        
        leftNavigationStyle = .close
        leftNavigationAction = .dismiss(true)
        
        title = "Vehicle Inspection"
            
        view.backgroundColor = Theme.Colors.backgroundGray
        
        let headerView = UIView(backgroundColor: .clear)
        headerView.constrainHeight(20)
        topView.verticalStackView.addArrangedSubview(headerView)
        
        super.viewDidLoad()
        
        if context.currentVehicle != nil {
            confirmationButtonTitle = "Check In Vehicle"
            getInspection(checkingOut: false)
        } else {
            confirmationButtonTitle = "Check Out Vehicle"
            getInspection(checkingOut: true)
        }
    }
    
    func getInspection(checkingOut: Bool) {
        
...
                let textField = getNumberField(from: question)
                fields.append(textField)
                textField.configureMember(of: fields, delegate: self)
                fieldsStackView.addArrangedSubview(textField)
                textField.translatesAutoresizingMaskIntoConstraints = false
                textField.pinHorizontalEdges(to: fieldsStackView, constant: 30)
                if question.questionKey == "battery" {
                    textField.maxLength = 3
                    textField.validators += [BatteryValidator()]
                }
            case "string":
                let textView = getTextView(from: question)
                textViews.append(textView)
...
