...
    #if DRIVER

    private lazy var offlineOnlineToggle: ToggleActionView = {
        let toggleView: ToggleActionView = .instantiateFromNib()
        toggleView.translatesAutoresizingMaskIntoConstraints = false
        
        let stateStrings = ToggleActionView.ToggleStateStrings(on: "Available", off: "Unavailable", disabled: "No vehicle")
        
        toggleView.updateToggle(to: context.dataStore.currentUser()?.isAvailable ?? false)
        
        toggleView.configure(stateStrings: stateStrings) { isOn in
            if !isOn {
                
...
                    self.present(vc, animated: true)
                }
            } else {
                self.requestAvailabilitySwitch(isOn: isOn, reason: nil)
            }
        }
        toggleView.setSwitchAccessibilityId(accessibilityId: "driverAvailabilityToggle")
        return toggleView
    }()
    
    func requestAvailabilitySwitch(isOn: Bool, reason: String?) {
        ProgressHUD.show()
        
...
