...
    var serviceList : [ServiceResponse]?
    
    override func viewDidLoad() {
        
        leftNavigationStyle = .close
        leftNavigationAction = .dismiss(true)
        title = "Select a Service".localize()
        
        super.viewDidLoad()

        view.backgroundColor = Theme.Colors.backgroundGray
        
        self.dataSource.refresh(items: serviceList ?? [])
...
