...
            leftNavigationAction = .pop(true)
            leftNavigationStyle = .back
            title = "Available Vehicles".localize()
        } else {
            leftNavigationStyle = .close
            leftNavigationAction = .dismiss(true)
            title = "Select a Vehicle".localize()
        }
        
        super.viewDidLoad()

        view.backgroundColor = Theme.Colors.backgroundGray
        
...
