...
    private var lastUserLocationError: Error? = nil

    override func viewDidLoad() {
        leftNavigationStyle = .custom(#imageLiteral(resourceName: "round_menu_black_48pt"))
        leftNavigationAction = .toggleMenu

        topView.leftNavigationButton.accessibilityIdentifier = "menuNavigationButton"
        topView.rightNavigationButton.accessibilityIdentifier = "actionNavigationButton"

        super.viewDidLoad()

        lastLocationServicesEnabled = CLLocationManager.locationServicesEnabled()
        context.socket.connect()
...
