...
        }
        else {
            presentAlert("Something went wrong".localize(), message: error.localizedDescription)
        }
    }

    func presentAlert(_ title: String?, message: String, action: String = "Ok") {
        let alert = UIAlertController(title: title, message: message, preferredStyle: .alert)
        alert.addAction(UIAlertAction(title: action, style: .default))
        present(alert, animated: true)
    }

    func presentAlert(_ title: String?, message: String, cancel: String?, confirm: UIAlertAction) {
...
