...
        }}
      >
        <Descriptions.Item label="Name">{ name }</Descriptions.Item>
        <Descriptions.Item label="Code">{ code }</Descriptions.Item>
        <Descriptions.Item label="Type">{ type }</Descriptions.Item>
        <Descriptions.Item label="Amount">{ formatPromocodeValue(type, value) }</Descriptions.Item>
        <Descriptions.Item label="Enabled">{ isEnabled ? 'Yes' : 'No' }</Descriptions.Item>
        <Descriptions.Item label="Usage Limit">{ usageLimit || '-'}</Descriptions.Item>
        <Descriptions.Item label="Expiry Date">
          { expiryDate ? moment(expiryDate).format('MM/DD/YYYY') : '-' }
        </Descriptions.Item>
      </Descriptions>
    );
...
