...
    func didEditDropoffPin(editing: Bool)
}

class AddressFieldsView: CardView {

    @IBOutlet weak var statusLabelView: UIView!
    @IBOutlet weak var pickupAddressField: AddressTextField!
    @IBOutlet weak var dropoffAddressField: AddressTextField!
    @IBOutlet weak var editPickupButton: Button!
    @IBOutlet weak var editDropoffButton: Button!
    @IBOutlet weak var pickupAddressStack: UIStackView!
    @IBOutlet weak var dropoffAddressStack: UIStackView!
    @IBOutlet weak var statusLabel: Label!
    @IBOutlet weak var addressFieldsStack: UIStackView!
...
