// MENU
"menu_ride" = "Ride";
"menu_ride_history" = "Ride History";
"menu_payments" = "Payments";
"menu_locations" = "Locations";
"menu_edit_profile" = "Edit Profile";
"menu_faq" = "FAQ";
...
"user_last_name" = "Last Name";
"user_email" = "Email";
"user_password" = "Password";
"user_home_zip_code" = "Home Zip Code";
"user_gender" = "Gender";
...
"settings_privacy" = "Privacy Policy";
"settings_conduct" = "Code of Conduct";
"settings_accessibility" = "Accessibility";
"settings_logout" = "Log out";
"settings_ready_logout" = "Ready to Log Out?";
...
// RIDE
"ride_contact_driver" = "Contact Driver";
"ride_cancel_ride" = "Cancel Ride";
"ride_cancel_request" = "Cancel Request";
"ride_pickup_address" = "Pickup address";
...
"ride_tap_pin_to_change" = "Tap a pin to change the location";
"ride_number_of_riders" = "How many passengers do you have for this ride?";
"ride_request" = "Request";
"ride_need_accessibility" = "Need Handicap Accessibility?";
"ride_calculating_price" = "Calculating ride price...";
...
"ride_wiring_route" = "Wiring your route...";
"ride_is_finishing_ride" = "Finishing another ride";
"ride_driver_is_on_the_way" = "Your driver is on the way";
"ride_be_ready_for_pickup" = "Please be ready when they arrive.";
"ride_your_ride_is_in_queue" = "Your ride is in the queue";
...
// REQUEST FLOW
"passengers" = "Passengers";
"pwyw_contribution" = "Contribution";
"accessibility" = "Accessibility";
"ride_request_ride_value" = "Ride Value";
"ride_request_where_to" = "Where to?";
"ride_request_confirm_route" = "Confirm Route";

// QUOTE
"good_news_age_restriction" = "Good news! Your age group is receiving free rides.";
"your_ride_will_be_free" = "Your ride will be free of charge"; 
"quote_more_info" = "More Info";
...
"payments_payment_method" = "Payment Method";
"payments_promocode" = "Promocode";
"payments_no_payment_method" = "No payment methods added";
"payments_ending_in" = "ending in";
"payments_no_pc_added" = "No promocodes added";
"payments_remove_payment" = "Yes, remove my payment method";
"payments_this_will_delete_pm" = "This will delete your payment method and a new one must be added to request paid rides.";
"payments_remove_promocode" = "Yes, remove my promocode";
"payments_this_will_remove_pc" = "This will remove your promocode";
"payments_save_card" = "Save Card";
"payments_add_pm" = "Add Payment Method";
"payments_save_pc" = "Save Promocode";
"payments_add_pc" = "Add Promocode";
"payments_add_card" = "Add Card";
"payments_payment_error" = "Payment error";
"payments_payment_error_info" = "There was a problem with your payment method. Please try again or add a new one.";
...
"general_save" = "Save";
"general_ok" = "Ok";
"general_are_you_sure" = "Are you sure?";
"general_confirm" = "Confirm";
"general_done" = "Done";
"general_invalid_input" = "Invalid input";
...

//ADA/WAV
"accessibility_toggle_title" = "Request wheelchair accessible vehicles";
"accessibility_toggle_title_request" = "Do you need wheelchair access?";
"accessibility_want_to_hide_accessibility_options_message" = "Do you want to hide accessibility options from now on? You can turn them back on in the side menu.";
...
"accessibility_text_add_promo_code" = "Add promo code";
"accessibility_text_add_payment_method" = "Add payment method";
"accessibility_text_remove_promo_code" = "Remove promo code";
"accessibility_text_remove_payment_method" = "Remove payment method";
"accessibility_text_edit_promo_code" = "Edit promo code";
"accessibility_text_edit_payment_method" = "Edit payment method";
...
"Email" = "Email";
"Password" = "Password";
"Sign In" = "Sign In";
"Forgot Password" = "Forgot Password";
"Change Password" = "Change Password";
...
"Locations Unavailable" = "Locations Unavailable";
"There are no rides available at this time." = "There are no rides available at this time.";
"Use Current Location" = "Use Current Location";
"Set as Pick Up" = "Set as Pick Up";
"Set as Drop Off" = "Set as Drop Off";
...
"Leave some feedback..." = "Leave some feedback...";
"Feedback" = "Feedback";
"Thank you for Riding" = "Thank you for Riding";
"Submit Feedback" = "Submit Feedback";
"Contact Us" = "Contact Us";
"Unable to Email" = "Unable to Email";
...
"We were unable to send this email at this time." = "We were unable to send this email at this time.";
"Report reason" = "Report reason";
"Edit Location" = "Edit Location";
"Set Location" = "Set Location";
"Current Location" = "Current Location";
...
"Ride Price" = "Contribution";
"Cancel Ride" = "Cancel Ride";
"Log In" = "Log In";
"Sign Up" = "Sign Up";
"and" = "and";
...
"stop" = "stop";
"Dismiss" = "Dismiss";
"Manage Ride" = "Manage Ride";

