...
    func configure(with item: RideResponse, tipsEnabled: Bool) {
        nameLabel.text = item.driverName
        pickupLabel.text = item.origin.address
        dropoffLabel.text = item.destination.address
        passengerStackView.update(passengers: item.passengers)

        if let rating = item.rating {
            missingRatingLabel.isHidden = true
            ratingStackView.isHidden = false
            ratingStackView.arrangedSubviews.forEach { ratingStackView.removeArrangedSubview($0) }
            for value in 1...5 {
                ratingStackView.addArrangedSubview(RatingIndicator(value: value, rating: rating))
            }
...
