...
        searchTableView.pinHorizontalEdges(to: topView.verticalStackView, constant: 20)
        
        topView.verticalStackView.addArrangedSubview(addressInfoView)
        addressInfoView.pinHorizontalEdges(to: topView.verticalStackView, constant: 20)
        addressInfoView.isHidden = true

        topView.rightNavigationButton.accessibilityIdentifier = "locationsNavigationButton"
        topView.titleLabel.accessibilityIdentifier = "homeTitleLabel"
        
        shouldShowLocationAlert = true
        shouldCheckLatestRide = true

        updateUserLocale()
...
