...
extension Notification.Name {
    static let didUpdatePaymentMethod = Notification.Name("didUpdatePaymentMethod")
}

class CreditCardViewController: FormViewController {

    lazy var cardTextField: STPPaymentCardTextField = {
        let cardTextField = STPPaymentCardTextField()
        cardTextField.accessibilityIdentifier = "cardTextField"
        cardTextField.accessibilityLabel = "Credit Card text field"
        cardTextField.backgroundColor = Theme.Colors.white
        cardTextField.borderColor = Theme.Colors.white
        cardTextField.postalCodeEntryEnabled = false
...
