...
        googleButton.setTitle("Continue with Google".localize(), for: .normal)
        googleButton.style = .google
        googleButton.accessibilityIdentifier = "continueWithGoogleButton"

        appleButton.setTitle("Continue with Apple".localize(), for: .normal)
        appleButton.style = .apple
        appleButton.accessibilityIdentifier = "continueWithAppleButton"

        orLabel.style = .body1darkgray
        orStackView.isHidden = true
    }

    @IBAction private func emailAction() {
...
