appId: com.thefreeride.rider.stage
---
- tapOn:
    id: "menuNavigationButton"
- tapOn:
    text: "Log Out"
# Answer dialog:
- tapOn: "Yes"
